--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 
 * {
 	opacity: 1;
-	transition: display 0.2s, opacity, 0.2s;
+	transition: display 0.2s, opacity 0.2s;
 }
 
 .hide {
@@ -34,28 +34,30 @@ body > div {
 	height: 100%;
 	position: relative;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-end;
+	flex-direction: row;
+	align-items: flex-end;
+	justify-content: center;
+	border-bottom: 3px solid var(--text-color);
 }
 body > div:nth-child(even) {
-	background-image: linear-gradient(#00000033,#00000033);
+	background-image: linear-gradient(#00000040,#00000040);
 }
 
 h3 {
 	font-size: xxx-large;
-	color: #ffffff77;
+	margin: 0;
 }
 input {
 	background-color: transparent;
 	display: block;
 	width: 40px;
 	height: 40px;
+	margin: 5px;
 	color: var(--text-color);
-	border: 1px solid var(--text-color);
+	border: 2px solid var(--text-color);
 	border-radius: 50%;
 	text-align: center;
-	font-size: large;
+	font-size: x-large;
 }
 
 #cardWrapper {
@@ -76,6 +78,10 @@ input {
 	font-size: large;
 	cursor: pointer;
 	transition: border-color 0.2s;
+}
+
+.card h4 {
+	margin: 4px;
 }
 
 .card:focus, .card:focus-visible{
