--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ input {
 	border-radius: 10px;
 	box-shadow: -1px -1px 3px 1px #fff, 2px 2px 15px #000;
 	font-size: larger;
+	background-image: none !important;
 }
 
 .rulesWrapper > h1 {
